# FORI-SIM

./: CMakeLists.txt  README.md  verification_non_uniform.sh  verification_uniform.sh
cmake/modules/: FindGUROBI.cmake
data/collections/: allAIDS.xml  allMutagenicity.xml  allProtein.xml
include/auxiliary/: gedlib_costs.hpp  get_lower_bound.hpp  graph.hpp  io.hpp  options.hpp
include/gurobi/: FORI_VERIFICATION.hpp
src/executables/: lb_heuristics.cpp  prepro_gurobi_aids_similarity.cpp  prepro_gurobi_muta_similarity.cpp  prepro_gurobi_prot_similarity.cpp
src/utils/: io.cpp
